tests/NormalTests/paczka1/fuzzy1/28639779.err
Error in line 4: urscgY A616 32,4
Error in line 10: QqeiyrwPm S135 89,7
Error in line 14: PPlXp A570 80,0
Error in line 17: PPlXp A616 41,9
Error in line 28: PPlXp S397 21,84
Error in line 24: Iif69 A616 84,5
Error in line 29: PPlXp S397 55,8
Error in line 36: S397 S135 33,7
Error in line 38: S397 S397 75,4
